objects/Enrolment_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Aboriginality_or_Torres_Strait_Islander__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Attach a copy of Certificate of Aboriginality or Torres Strait Islander if applicable</inlineHelpText>
        <label>Aboriginality or Torres Strait Islander</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Include the non refundable Application Fee ($200.00AUD resident / $450.00AUD overseas applicant)</inlineHelpText>
        <label>Application Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birth_Certificate_or_Passport__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Attach a copy of Birth Certificate or Passport</inlineHelpText>
        <label>Birth Certificate or Passport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enrolment_Application_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Complete and sign the Enrolment Application Form</inlineHelpText>
        <label>Enrolment Application Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residency_Visa__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Attach a copy of Residency Visa if applicable</inlineHelpText>
        <label>Residency Visa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Attach a copy of the student’s last two (2) school reports if it is for entry within the next 2 years except for Kindergarten enrolment, and copies of any NAPLAN reports</inlineHelpText>
        <label>School Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_s_policy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Read the School’s policy on Privacy</inlineHelpText>
        <label>School’s policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_of_Both_Parents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signature of Both Parents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Enrolment</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Enrolment Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Enrolment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrolment Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>